--- a/genshin_char_gacha_simulator.html
+++ b/genshin_char_gacha_simulator.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>原神キャラガチャ計算機（掴みし明光対応）</title>
+  <title>原神キャラガチャ計算機（掴みし明光 正式対応）</title>
   <style>
     body { font-family: sans-serif; padding: 1em; background-color: #f5f5f5; color: #333; }
     label { display: block; margin-top: 1em; }
@@ -47,7 +47,7 @@
   </label>
 
   <label>目標PUキャラ数:
-    <input type="number" id="puTarget" value="1" min="1" max="6" />
+    <input type="number" id="puTarget" value="1" min="1" max="7" />
   </label>
 
   <button onclick="calculate()">計算する</button>
@@ -64,21 +64,28 @@
       let puCount = 0;
 
       while (puCount < puTarget) {
-        if (missCount === 3) {
+        if (missCount >= 3) {
+          // 掴みし明光でPU
           pulls += 90;
           missCount = 0;
         } else {
+          // すり抜け
           pulls += 90;
           missCount++;
-          if (missCount === 3) {
+
+          if (missCount >= 3) {
+            // 次で掴みし明光が発動
             pulls += 90;
             missCount = 0;
           } else {
+            // PU確定
             pulls += 90;
+            // missCount は維持（掴みし明光のため）
           }
         }
         puCount++;
       }
+
       return pulls;
     }
 
