--- a/genshin_char_gacha_simulator.html
+++ b/genshin_char_gacha_simulator.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>原神キャラガチャシミュレーター（完全統合版）</title>
+  <title>原神キャラガチャシミュレーター</title>
   <style>
     body { font-family: sans-serif; background: #f4f4f4; padding: 1em; color: #333; }
     label { display: block; margin-top: 1em; }
@@ -20,13 +20,13 @@
   </style>
 </head>
 <body>
-  <h1>原神キャラガチャシミュレーター（期待値＆最悪比較・掴みし明光対応）</h1>
+  <h1>原神キャラガチャシミュレーター（期待値＆最悪比較）</h1>
 
-  <label>手持ち原石:
+  <label>原石所持数:
     <input type="number" id="primogems" value="0">
   </label>
 
-  <label>紡がれた運命（所持数）:
+  <label>紡がれた運命所持数:
     <input type="number" id="fates" value="0">
   </label>
 
@@ -55,7 +55,7 @@
   <div class="result" id="result"></div>
 
   <div class="note">
-    ※期待値は「0.6%→74連以降+6%上昇」のPU50%抽選＆掴みし明光（3連続すり抜けPU化）に対応。<br>
+    ※期待値は「0.6%→74連以降+6%上昇」のPU50%抽選＆最悪の場合は掴みし明光（3連続すり抜け後は確定PU）に対応。<br>
     ※課金額は「12,000円で8,080原石（オマケ込み）」で計算。初回2倍は含みません。
   </div>
 
