--- a/genshin_char_gacha_simulator.html
+++ b/genshin_char_gacha_simulator.html
@@ -57,7 +57,7 @@
 
   <div class="note">
     ※期待値は「0.6%→74連以降+6%上昇」のPU50%抽選＆最悪の場合は掴みし明光（3連続すり抜けPU化）に対応。<br>
-    ※課金額は「12,000円で8,080原石（オマケ込み）」で計算。初回2倍ボーナスは含みません。
+    ※課金額は「原石8,080個/12,000円（オマケ込み）」で計算。初回2倍ボーナスは含みません。
   </div>
 
   <script>
@@ -168,7 +168,7 @@
           <tr><td>必要祈願数</td><td>${expectedPulls}回</td><td>${worstPulls}回</td></tr>
           <tr><td>不足祈願数</td><td>${shortExpected}回</td><td>${shortWorst}回</td></tr>
           <tr><td>不足原石数</td><td>${gemExpected}</td><td>${gemWorst}</td></tr>
-          <tr><td>課金額の目安</td><td>¥${yenExpected.toLocaleString()}</td><td>¥${yenWorst.toLocaleString()}</td></tr>
+          <tr><td>必要課金額の目安</td><td>¥${yenExpected.toLocaleString()}</td><td>¥${yenWorst.toLocaleString()}</td></tr>
         </table>
       `;
     }
